# agent-orchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: agent-task.md
backend/: __init__.py  config.py  evidence_cli.py  github_cli.py  github_comment_cli.py  main.py  models.py  project_cli.py  project_config.py  project_init_cli.py  project_initializer.py  review_cli.py  state_cli.py  task_manager.py  tasks_cli.py
backend/agents/: planner_agent.py  reporter_agent.py  reviewer_agent.py
backend/prompts/: planner.md  reviewer.md  worker.md
backend/services/: github_service.py  llm_client.py
docs/: AGENT_ROLES.md  ARCHITECTURE.md  GITHUB_AND_DOCKER.md  GITHUB_SYNC.md  PROJECT_CONFIG.md  PROJECT_INIT.md  ROADMAP.md  STATE_TABLE.md  TASK_MANAGER.md  TRUSTED_STATE.md  USAGE.md
templates/: coding-rules.md  project-agent-config.yaml  roles.md  test-rules.md
