[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "A reusable multi-agent orchestration system for planning, assigning, reviewing, and tracking AI agent tasks."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
